# SkillProof

./: .gitignore  Implementation.md  LICENSE  PHASE_1_INCEPTION_PLAN.md  README.md  SkillProof.md.txt  SkillProof1.md  SkillProof2.md  compose.yaml
backend/: .env.example  Agent.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  errors.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: health.py  scans.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  base.py  ledger.py  lifecycle.py  models.py  repositories.py  session.py
backend/app/domain/: __init__.py  ledger.py  policy.py  ports.py  records.py  repository.py  scan.py
backend/app/schemas/: scan.py
backend/app/services/: __init__.py  evidence_ledger.py  readiness.py  repository_url.py  scan_coordinator.py  scan_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_evidence_ledger.py  __init__.py
backend/scripts/: setup_local_postgres.ps1
backend/tests/api/: test_scan_api_contract.py
backend/tests/integration/: test_postgres_evidence_ledger.py
backend/tests/unit/: test_evidence_ledger.py  test_model_metadata.py  test_repository_url.py  test_scan_serialization.py
docs/: Home.md  OBSIDIAN_GUIDE.md  README.md
docs/.obsidian/: app.json  core-plugins.json  daily-notes.json  graph.json  templates.json
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
schemas/: evidence-contract-v0.1.schema.json
(+89 files in other folders)
